fix: 修复 7 CRITICAL + 19 HIGH 安全/性能/数据问题
CRITICAL (7):
- C1: OperationLogAspect 参数名敏感词过滤, changePassword 关闭参数记录
- C2: PaymentController Map→PaymentRequest DTO(@Valid), 新增 MethodArgumentNotValidException handler
- C3: AiChatController 移除 permitAll, 强制认证 + getSessionMessages 加 userId 校验
- C4: application.yml 密钥 ${ENV:default}, application-prod.yml 无回退
- C5: stores/user.js JSON.parse 加 try-catch 防白屏
- C6: WebSocket JWT URL→Cookie(JwtCookieConfigurator 握手拦截 + 前端 Cookie 同步)
- C7: JWT 黑名单(TokenBlacklistService) + Filter/WS 双重校验 + 登出/改密自动失效

HIGH 性能 (7):
- toVO→toVOList 批量加载 CarType/Driver (消灭 N×2 查询)
- review() SELECT AVG(rating) 替代加载全量评价
- getTodayRevenue() SELECT SUM(final_price) 替代加载全量订单
- CouponServiceImpl/PaymentServiceImpl selectBatchIds 替代 N+1
- AiChatServiceImpl: buildChatParams() LIMIT 21 + buildSystemPrompt() volatile 缓存

HIGH 安全 (2): CORS 收紧 + Math.random→SecureRandom
HIGH 数据库 (5): indexes.sql/migration 去重 + VARCHAR→TIME
HIGH 前端 (3): Register 错误处理 + /addresses 路由修正 + useSmsCode 定时器清理
HIGH 锁/流 (2): arrive/startTrip/complete Redisson 锁 + SSE completeWithError

Co-Authored-By: Claude <noreply@anthropic.com>